--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,7 +28,18 @@
         </activity>
         
         <activity android:name="com.tomaszgawel.flickrphotos.SinglePhotoActivity"
-            android:theme="@android:style/Theme.Holo.Dialog.MinWidth"></activity>
+            android:theme="@android:style/Theme.Holo.Dialog.MinWidth" />
+        
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.tomaszgawel.flickrphotos.share"
+            android:grantUriPermissions="true"
+            android:exported="false">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/filepaths" />
+        </provider>
+        
     </application>
 
 </manifest>
