--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity
             android:name="com.tomaszgawel.flickrphotos.PhotoSearchActivity"
             android:label="@string/app_name"
-            android:launchMode="singleInstance" >
+            android:launchMode="singleInstance"
+            android:windowSoftInputMode="stateVisible|adjustPan" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -30,13 +31,6 @@
         
         <activity android:name="com.tomaszgawel.flickrphotos.SinglePhotoActivity"
             android:label="@string/single_photo_activity_title" />
-        
-        <activity android:name="com.tomaszgawel.flickrphotos.RecentQueriesActivity"
-            android:label="@string/recent_queries_activity_title"
-            android:theme="@android:style/Theme.Holo.Dialog.MinWidth" />
-                
-        <activity android:name="com.tomaszgawel.flickrphotos.AppPreferencesActivity"
-            android:label="@string/app_preferences_activity_title" />
         
         <provider
             android:name="com.tomaszgawel.flickrphotos.provider.PhotoShareProvider"
